# golden-rust

./: .gitignore  Cargo.toml  README.md  derivation.nix  flake.nix  shell.nix
.github/workflows/: ci-darwin.yml  ci-linux.yml
src/: lib.rs  utils.rs
